Fix: button contrast issue in Sortable Container

--- a/src/container/editor.scss
+++ b/src/container/editor.scss
@@ -12,6 +12,8 @@
 
 		& .block-editor-button-block-appender {
 			flex-direction: row;
+			color: currentColor;
+			box-shadow: inset 0 0 0 1px currentColor;
 
 			&::after {
 				content: attr(aria-label);
